--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@mdi/font": "^6.7.96",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
